Fixed centering issue with navbar on mobile phone screens.

--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,8 @@ body {
     z-index: 100;
     background: rgba(49, 52, 86, 0.8);
     height: 10vh;
+    margin: 0;
+    padding: 0;
   }
 
   .projects-right,
@@ -190,6 +192,10 @@ body {
   .other-left {
     text-align: center;
     margin-bottom: 3vh;
+  }
+
+  #left-section {
+    display: none;
   }
 }
 
